# code-template-lightning

./: .env-example  .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml
.github/workflows/: python.yml
doc/: conf.py  index.rst
doc/introduction/: index.rst
doc/introduction/notebooks/: start.ipynb
doc/reference/: dataset.rst  index.rst  lightning.rst  model.rst  utils.rst
notebooks/: start.ipynb
package_name/: conf.py  module.py
package_name/tests/: test_dummy.py
packagename/: __init__.py  conf.py  dataset.py  lightning.py  model.py  utils.py
packagename/tests/: test_dummy.py  test_mlp.py
